Fix content jump when tabbing to small buttons

--- a/packages/core/src/components/Button/Button.scss
+++ b/packages/core/src/components/Button/Button.scss
@@ -74,7 +74,7 @@
 
   &:focus {
     // We do this to prevent content jump when adding a thicker bottom border.
-    padding-bottom: 1px;
+    padding-bottom: 2px;
   }
 }
 
